# pytimelapse

./: .gitignore  LICENSE  README.md  camera.py  main.py  pyproject.toml  video_utils.py
pytimelapse.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_main.py
