[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "pytimelapse"
version = "0.1.0"
description = "Python Time-lapse project"
authors = [
    {name = "Jenil Padshala", email = "twilightcoding@gmail.com"},
]
requires-python = ">=3.8"
dependencies = [
    "exceptiongroup==1.2.2",
    "iniconfig==2.1.0",
    "opencv-python>=4.8.0",
    "packaging==25.0",
    "pluggy==1.5.0",
    "pytest==8.3.5",
    "tomli==2.2.1",
]

[tool.setuptools]
packages = ["pytimelapse"]

